tests/negative/gold/as4-test.gold
tests/negative/as4-test.toit:6:8: error: Type 'none' is only allowed as return type
  4 as none
       ^~~~
Compilation failed
